src/main/java/com/antlr/demoantlr/CddlParser.java
// Generated from com/antlr/demoantlr/Cddl.g4 by ANTLR 4.10.1
package com.antlr.demoantlr;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CddlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		QUOTE=1, HASH=2, AMPERSAND=3, LEFT_PAREN=4, RIGHT_PAREN=5, ASTERISK=6, 
		PLUS=7, COMMA=8, DASH=9, PERIOD=10, SLASH=11, ZERO=12, COLON=13, LESS_THAN=14, 
		EQUALS=15, GREATER_THAN=16, QUESTION=17, LEFT_BRACE=18, RIGHT_BRACE=19, 
		CARAT=20, SCHAR_LETTER=21, TAB=22, LF=23, CR=24, SPACE=25, EXCLAMATION=26, 
		DOLLAR=27, PERCENT=28, APOSTROPHE=29, ONE=30, TWO=31, THREE=32, FOUR=33, 
		FIVE=34, SIX=35, SEVEN=36, EIGHT=37, NINE=38, SEMICOLON=39, AT=40, UNDERSCORE=41, 
		CAP_A=42, CAP_B=43, CAP_C=44, CAP_D=45, CAP_E=46, CAP_F=47, CAP_G=48, 
		CAP_H=49, CAP_I=50, CAP_J=51, CAP_K=52, CAP_L=53, CAP_M=54, CAP_N=55, 
		CAP_O=56, CAP_P=57, CAP_Q=58, CAP_R=59, CAP_S=60, CAP_T=61, CAP_U=62, 
		CAP_V=63, CAP_W=64, CAP_X=65, CAP_Y=66, CAP_Z=67, A=68, B=69, C=70, D=71, 
		E=72, F=73, G=74, H=75, I=76, J=77, K=78, L=79, M=80, N=81, O=82, P=83, 
		Q=84, R=85, S=86, T=87, U=88, V=89, W=90, X=91, Y=92, Z=93, LEFT_CURLY_BRACE=94, 
		PIPE=95, RIGHT_CURLY_BRACE=96, TILDE=97, U_007F=98, ACCENT=99, BACKSLASH=100;
	public static final int
		RULE_entry = 0, RULE_cddl = 1, RULE_rule_1 = 2, RULE_typename = 3, RULE_groupname = 4, 
		RULE_assignt = 5, RULE_assigng = 6, RULE_genericparm = 7, RULE_genericarg = 8, 
		RULE_type = 9, RULE_type1 = 10, RULE_type2 = 11, RULE_rangeop = 12, RULE_ctlop = 13, 
		RULE_group = 14, RULE_grpchoice = 15, RULE_grpent = 16, RULE_memberkey = 17, 
		RULE_bareword = 18, RULE_optcom = 19, RULE_occur = 20, RULE_uint_1 = 21, 
		RULE_value = 22, RULE_int_1 = 23, RULE_number = 24, RULE_hexfloat = 25, 
		RULE_fraction = 26, RULE_exponent = 27, RULE_text = 28, RULE_schar = 29, 
		RULE_sesc = 30, RULE_bytes = 31, RULE_bchar = 32, RULE_bsqual = 33, RULE_id = 34, 
		RULE_alpha = 35, RULE_ealpha = 36, RULE_digit = 37, RULE_digit1 = 38, 
		RULE_hexdig = 39, RULE_bindig = 40, RULE_s = 41, RULE_ws = 42, RULE_sp = 43, 
		RULE_nl = 44, RULE_comment = 45, RULE_pchar = 46, RULE_crlf = 47;
	private static String[] makeRuleNames() {
		return new String[] {
			"entry", "cddl", "rule_1", "typename", "groupname", "assignt", "assigng", 
			"genericparm", "genericarg", "type", "type1", "type2", "rangeop", "ctlop", 
			"group", "grpchoice", "grpent", "memberkey", "bareword", "optcom", "occur", 
			"uint_1", "value", "int_1", "number", "hexfloat", "fraction", "exponent", 
			"text", "schar", "sesc", "bytes", "bchar", "bsqual", "id", "alpha", "ealpha", 
			"digit", "digit1", "hexdig", "bindig", "s", "ws", "sp", "nl", "comment", 
			"pchar", "crlf"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'\"'", "'#'", "'&'", "'('", "')'", "'*'", "'+'", "','", "'-'", 
			"'.'", "'/'", "'0'", "':'", "'<'", "'='", "'>'", "'?'", "'['", "']'", 
			"'^'", null, "'\\u0009'", "'\\u000A'", "'\\u000D'", "' '", "'!'", "'$'", 
			"'%'", "'''", "'1'", "'2'", "'3'", "'4'", "'5'", "'6'", "'7'", "'8'", 
			"'9'", "';'", "'@'", "'_'", "'A'", "'B'", "'C'", "'D'", "'E'", "'F'", 
			"'G'", "'H'", "'I'", "'J'", "'K'", "'L'", "'M'", "'N'", "'O'", "'P'", 
			"'Q'", "'R'", "'S'", "'T'", "'U'", "'V'", "'W'", "'X'", "'Y'", "'Z'", 
			"'a'", "'b'", "'c'", "'d'", "'e'", "'f'", "'g'", "'h'", "'i'", "'j'", 
			"'k'", "'l'", "'m'", "'n'", "'o'", "'p'", "'q'", "'r'", "'s'", "'t'", 
			"'u'", "'v'", "'w'", "'x'", "'y'", "'z'", "'{'", "'|'", "'}'", "'~'", 
			"'\\u007F'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "QUOTE", "HASH", "AMPERSAND", "LEFT_PAREN", "RIGHT_PAREN", "ASTERISK", 
			"PLUS", "COMMA", "DASH", "PERIOD", "SLASH", "ZERO", "COLON", "LESS_THAN", 
			"EQUALS", "GREATER_THAN", "QUESTION", "LEFT_BRACE", "RIGHT_BRACE", "CARAT", 
			"SCHAR_LETTER", "TAB", "LF", "CR", "SPACE", "EXCLAMATION", "DOLLAR", 
			"PERCENT", "APOSTROPHE", "ONE", "TWO", "THREE", "FOUR", "FIVE", "SIX", 
			"SEVEN", "EIGHT", "NINE", "SEMICOLON", "AT", "UNDERSCORE", "CAP_A", "CAP_B", 
			"CAP_C", "CAP_D", "CAP_E", "CAP_F", "CAP_G", "CAP_H", "CAP_I", "CAP_J", 
			"CAP_K", "CAP_L", "CAP_M", "CAP_N", "CAP_O", "CAP_P", "CAP_Q", "CAP_R", 
			"CAP_S", "CAP_T", "CAP_U", "CAP_V", "CAP_W", "CAP_X", "CAP_Y", "CAP_Z", 
			"A", "B", "C", "D", "E", "F", "G", "H", "I", "J", "K", "L", "M", "N", 
			"O", "P", "Q", "R", "S", "T", "U", "V", "W", "X", "Y", "Z", "LEFT_CURLY_BRACE", 
			"PIPE", "RIGHT_CURLY_BRACE", "TILDE", "U_007F", "ACCENT", "BACKSLASH"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Cddl.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CddlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class EntryContext extends ParserRuleContext {
		public List<CddlContext> cddl() {
			return getRuleContexts(CddlContext.class);
		}
		public CddlContext cddl(int i) {
			return getRuleContext(CddlContext.class,i);
		}
		public EntryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_entry; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CddlListener ) ((CddlListener)listener).enterEntry(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CddlListener ) ((CddlListener)listener).exitEntry(this);
		}
	}

	public final EntryContext entry() throws RecognitionException {
		EntryContext _localctx = new EntryContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_entry);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(96);
				cddl();
				}
				}
				setState(99); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LF) | (1L << CR) | (1L << SPACE) | (1L << DOLLAR) | (1L << SEMICOLON) | (1L << AT) | (1L << UNDERSCORE) | (1L << CAP_A) | (1L << CAP_B) | (1L << CAP_C) | (1L << CAP_D) | (1L << CAP_E) | (1L << CAP_F) | (1L << CAP_G) | (1L << CAP_H) | (1L << CAP_I) | (1L << CAP_J) | (1L << CAP_K) | (1L << CAP_L) | (1L << CAP_M) | (1L << CAP_N) | (1L << CAP_O) | (1L << CAP_P) | (1L << CAP_Q) | (1L << CAP_R) | (1L << CAP_S) | (1L << CAP_T) | (1L << CAP_U) | (1L << CAP_V))) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & ((1L << (CAP_W - 64)) | (1L << (CAP_X - 64)) | (1L << (CAP_Y - 64)) | (1L << (CAP_Z - 64)) | (1L << (A - 64)) | (1L << (B - 64)) | (1L << (C - 64)) | (1L << (D - 64)) | (1L << (E - 64)) | (1L << (F - 64)) | (1L << (G - 64)) | (1L << (H - 64)) | (1L << (I - 64)) | (1L << (J - 64)) | (1L << (K - 64)) | (1L << (L - 64)) | (1L << (M - 64)) | (1L << (N - 64)) | (1L << (O - 64)) | (1L << (P - 64)) | (1L << (Q - 64)) | (1L << (R - 64)) | (1L << (S - 64)) | (1L << (T - 64)) | (1L << (U - 64)) | (1L << (V - 64)) | (1L << (W - 64)) | (1L << (X - 64)) | (1L << (Y - 64)) | (1L << (Z - 64)))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CddlContext extends ParserRuleContext {
		public List<SContext> s() {
			return getRuleContexts(SContext.class);
		}
		public SContext s(int i) {
			return getRuleContext(SContext.class,i);
		}
		public List<Rule_1Context> rule_1() {
			return getRuleContexts(Rule_1Context.class);
		}
		public Rule_1Context rule_1(int i) {
			return getRuleContext(Rule_1Context.class,i);
		}
		public CddlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cddl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CddlListener ) ((CddlListener)listener).enterCddl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CddlListener ) ((CddlListener)listener).exitCddl(this);
		}
	}

	public final CddlContext cddl() throws RecognitionException {
		CddlContext _localctx = new CddlContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_cddl);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			s();
			setState(105); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(102);
					rule_1();
					setState(103);
					s();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(107); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			} while ( _alt!=2 && _alt!= ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Rule_1Context extends ParserRuleContext {
		public TypenameContext typename() {
			return getRuleContext(TypenameContext.class,0);
		}
		public List<SContext> s() {
			return getRuleContexts(SContext.class);
		}
		public SContext s(int i) {
			return getRuleContext(SContext.class,i);
		}
		public AssigntContext assignt() {
			return getRuleContext(AssigntContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public GenericparmContext genericparm() {
			return getRuleContext(GenericparmContext.class,0);
		}
		public GroupnameContext groupname() {
			return getRuleContext(GroupnameContext.class,0);
		}
		public AssigngContext assigng() {
			return getRuleContext(AssigngContext.class,0);
		}
		public GrpentContext grpent() {
			return getRuleContext(GrpentContext.class,0);
		}
		public Rule_1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rule_1; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CddlListener ) ((CddlListener)listener).enterRule_1(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CddlListener ) ((CddlListener)listener).exitRule_1(this);
		}
	}

	public final Rule_1Context rule_1() throws RecognitionException {
		Rule_1Context _localctx = new Rule_1Context(_ctx, getState());
		enterRule(_localctx, 4, RULE_rule_1);
		int _la;
		try {
			setState(127);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(109);
				typename();
				setState(111);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==LESS_THAN) {
					{
					setState(110);
					genericparm();
					}
				}

				setState(113);
				s();
				setState(114);
				assignt();
				setState(115);
				s();
				setState(116);
				type();
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(118);
				groupname();
				setState(120);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==LESS_THAN) {
					{
					setState(119);
					genericparm();
					}
				}

				setState(122);
				s();
				setState(123);
				assigng();
				setState(124);
				s();
				setState(125);
				grpent();
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypenameContext extends ParserRuleContext {
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public TypenameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typename; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CddlListener ) ((CddlListener)listener).enterTypename(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CddlListener ) ((CddlListener)listener).exitTypename(this);
		}
	}

	public final TypenameContext typename() throws RecognitionException {
		TypenameContext _localctx = new TypenameContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_typename);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			id();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GroupnameContext extends ParserRuleContext {
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public GroupnameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_groupname; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CddlListener ) ((CddlListener)listener).enterGroupname(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CddlListener ) ((CddlListener)listener).exitGroupname(this);
		}
	}

	public final GroupnameContext groupname() throws RecognitionException {
		GroupnameContext _localctx = new GroupnameContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_groupname);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			id();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssigntContext extends ParserRuleContext {
		public TerminalNode EQUALS() { return getToken(CddlParser.EQUALS, 0); }
		public TerminalNode SLASH() { return getToken(CddlParser.SLASH, 0); }
		public AssigntContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CddlListener ) ((CddlListener)listener).enterAssignt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CddlListener ) ((CddlListener)listener).exitAssignt(this);
		}
	}

	public final AssigntContext assignt() throws RecognitionException {
		AssigntContext _localctx = new AssigntContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_assignt);
		try {
			setState(136);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EQUALS:
				enterOuterAlt(_localctx, 1);
				{
				setState(133);
				match(EQUALS);
				}
				break;
			case SLASH:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(134);
				match(SLASH);
				setState(135);
				match(EQUALS);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssigngContext extends ParserRuleContext {
		public TerminalNode EQUALS() { return getToken(CddlParser.EQUALS, 0); }
		public List<TerminalNode> SLASH() { return getTokens(CddlParser.SLASH); }
		public TerminalNode SLASH(int i) {
			return getToken(CddlParser.SLASH, i);
		}
		public AssigngContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assigng; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CddlListener ) ((CddlListener)listener).enterAssigng(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CddlListener ) ((CddlListener)listener).exitAssigng(this);
		}
	}

	public final AssigngContext assigng() throws RecognitionException {
		AssigngContext _localctx = new AssigngContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_assigng);
		try {
			setState(142);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EQUALS:
				enterOuterAlt(_localctx, 1);
				{
				setState(138);
				match(EQUALS);
				}
				break;
			case SLASH:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(139);
				match(SLASH);
				setState(140);
				match(SLASH);
				setState(141);
				match(EQUALS);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GenericparmContext extends ParserRuleContext {
		public TerminalNode LESS_THAN() { return getToken(CddlParser.LESS_THAN, 0); }
		public List<SContext> s() {
			return getRuleContexts(SContext.class);
		}
		public SContext s(int i) {
			return getRuleContext(SContext.class,i);
		}
		public List<IdContext> id() {
			return getRuleContexts(IdContext.class);
		}
		public IdContext id(int i) {
			return getRuleContext(IdContext.class,i);
		}
		public TerminalNode GREATER_THAN() { return getToken(CddlParser.GREATER_THAN, 0); }
		public List<TerminalNode> COMMA() { return getTokens(CddlParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(CddlParser.COMMA, i);
		}
		public GenericparmContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_genericparm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CddlListener ) ((CddlListener)listener).enterGenericparm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CddlListener ) ((CddlListener)listener).exitGenericparm(this);
		}
	}
